# mcp-sre-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docker/: Dockerfile-cluster
docs/: architecture.md  how-to-add-mcp-tools.md  kubernetes-cluster-mcp.md
skills/mcp-sre-investigation/: SKILL.md
skills/mcp-sre-investigation/agents/: openai.yaml
skills/mcp-sre-investigation/references/: investigation-flow.md
skills/mcp-sre-platform-adapters/: SKILL.md
skills/mcp-sre-platform-adapters/agents/: openai.yaml
skills/mcp-sre-platform-adapters/references/: adapter-patterns.md
skills/mcp-sre-server-builder/: SKILL.md
skills/mcp-sre-server-builder/agents/: openai.yaml
skills/mcp-sre-server-builder/references/: server-patterns.md
skills/mcp-sre-tech-docs/: SKILL.md
skills/mcp-sre-tech-docs/agents/: openai.yaml
skills/mcp-sre-tech-docs/assets/: adr-template.md  architecture-template.md  runbook-template.md
skills/mcp-sre-tech-docs/references/: doc-patterns.md  writing-style.md
skills/mcp-sre-workspace/: SKILL.md
skills/mcp-sre-workspace/agents/: openai.yaml
skills/mcp-sre-workspace/references/: repo-blueprint.md
src/mcp_sre_agent/: __init__.py  __main__.py  cli.py
src/mcp_sre_agent/adapters/: __init__.py  kubernetes.py
src/mcp_sre_agent/app/: __init__.py  config.py  logging.py
src/mcp_sre_agent/domain/: __init__.py  cluster.py
src/mcp_sre_agent/servers/: __init__.py  cluster.py  errors.py  registry.py  tooling.py
tests/: test_cluster_creation.py  test_cluster_service.py  test_domain_common.py  test_kubernetes_security.py
(+25 files in other folders)
