[project]
name = "mcp-sre-agent"
version = "0.1.0"
description = "SRE-focused MCP servers for Kubernetes, metrics, logs, and investigation workflows"
readme = "README.md"
authors = [
    { name = "Le Huu Khanh", email = "khanhledsdh@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "kubernetes>=35.0.0",
    "mcp>=1.26.0",
]

[project.scripts]
mcp-sre-agent = "mcp_sre_agent:main"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
